--- a/disable-extensions/manifest.json
+++ b/disable-extensions/manifest.json
@@ -1,20 +1,24 @@
 {
-    "manifest_version": 3,
-    "name": "Disable Extension on Specific Sites",
-    "version": "1.0",
-    "description": "Disables specific extensions on a list of specific sites.",
-    "permissions": [
-      "tabs",
-      "storage",
-      "management",
-      "activeTab"
-    ],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "options_ui": {
-      "page": "options.html",
-      "open_in_tab": true
-    }
+  "manifest_version": 3,
+  "name": "Disable Extension on Specific Sites",
+  "version": "1.0",
+  "description": "Disables specific extensions on a list of specific sites.",
+  "permissions": [
+    "tabs",
+    "storage",
+    "management",
+    "activeTab"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
+  "icons": {
+    "16": "icons/icon_16.png",
+    "48": "icons/icon_48.png",
+    "128": "icons/icon_128.png"
   }
-  
+}
